discussion/kv_engine/155544/155544_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46827: Introduce KVBucket::hasMemoryInCheckpoint()

Change-Id: I29368cdee147fe6421398a75aff25f47e00725ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-06-10 14:38:52.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 15:40:49.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36706/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36706/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31373/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:3274:26:
error: member access into incomplete type "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31373/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9743/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9743/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11318/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only
[2021-06-10T15:07:23.784Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:227: Failure
[2021-06-10T15:07:23.784Z] Failed
[2021-06-10T15:07:23.784Z] Failed storing an item before the predicate returned true
[2021-06-10T15:07:23.784Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1134: Failure
[2021-06-10T15:07:23.784Z] Expected: (activeRR) > (60), actual: 38 vs 60
[2021-06-10T15:07:23.784Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only, where GetParam() = ("persistent", "value_only") (223 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11738/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11738/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11466/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only
[2021-06-10T15:12:23.662Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:227: Failure
[2021-06-10T15:12:23.662Z] Failed
[2021-06-10T15:12:23.662Z] Failed storing an item before the predicate returned true
[2021-06-10T15:12:23.662Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1134: Failure
[2021-06-10T15:12:23.662Z] Expected: (activeRR) > (60), actual: 38 vs 60
[2021-06-10T15:12:23.662Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only, where GetParam() = ("persistent", "value_only") (157 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11466/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10390/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only
[2021-06-10T14:50:55.680Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:227: Failure
[2021-06-10T14:50:55.680Z] Failed
[2021-06-10T14:50:55.680Z] Failed storing an item before the predicate returned true
[2021-06-10T14:50:55.680Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1134: Failure
[2021-06-10T14:50:55.680Z] Expected: (activeRR) > (60), actual: 38 vs 60
[2021-06-10T14:50:55.680Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only, where GetParam() = ("persistent", "value_only") (268 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10390/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19321/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/268/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
